--- a/index.html
+++ b/index.html
@@ -5,19 +5,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Deputat Kimdir?</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Deputat Kimdir?</h1>
-    <input type="text" id="searchBox" placeholder="Deputat axtar..." />
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Deputat Kimdir?</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="#">Ana səhifə</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Haqqında</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Qəhrəman banner -->
+  <header class="hero-section text-white text-center">
+    <div class="container py-5">
+      <h1 class="display-4 fw-bold">Azərbaycanın Parlament üzvlərini tanıyın</h1>
+      <p class="lead">Deputatların dairələri, partiyaları və fəaliyyətləri haqqında məlumat alın.</p>
+    </div>
   </header>
 
-  <main id="deputatList"></main>
+  <!-- Filtrlər və axtarış -->
+  <section class="bg-light py-4">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-6 mb-3">
+          <input type="text" id="searchInput" class="form-control" placeholder="Deputat axtar...">
+        </div>
+        <div class="col-md-6 text-md-end">
+          <div class="btn-group" role="group">
+            <button class="btn btn-outline-dark" onclick="filterPartiya('Hamısı')">Hamısı</button>
+            <button class="btn btn-outline-primary" onclick="filterPartiya('YAP')">YAP</button>
+            <button class="btn btn-outline-warning" onclick="filterPartiya('REAL')">REAL</button>
+            <button class="btn btn-outline-secondary" onclick="filterPartiya('Bitərəf')">Bitərəf</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <footer>
-    <p>© 2025 Deputat Kimdir? Layihəsi</p>
+  <!-- Deputat kartları -->
+  <section class="container py-5">
+    <div class="row g-4" id="deputatList"></div>
+  </section>
+
+  <!-- Modal -->
+  <div class="modal fade" id="deputatModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 id="modalAd" class="modal-title"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-4 text-center mb-3">
+              <img id="modalFoto" class="img-fluid rounded shadow" />
+            </div>
+            <div class="col-md-8">
+              <p><strong>Dairə:</strong> <span id="modalDaire"></span></p>
+              <p><strong>Haqqında:</strong></p>
+              <p id="modalHaqqinda"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-light py-4 text-center">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 Deputat Kimdir? | Layihə müəllifi: Sən</p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
